--- a/ui/package.json
+++ b/ui/package.json
@@ -4,14 +4,20 @@
   "description": "UI app for GRANDstack",
   "dependencies": {
     "@material-ui/core": "^1.5.0",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/icons": "^1.1.1",
     "apollo-boost": "^0.1.13",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-http": "^1.5.5",
+    "auth0-js": "^9.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "1.1.4",
+    "recharts": "^1.3.1",
     "serve": "^7.2.0"
   },
   "scripts": {
