--- a/ui/.env
+++ b/ui/.env
@@ -1,1 +1,4 @@
-REACT_APP_GRAPHQL_URI=http://localhost:4000
+REACT_APP_GRAPHQL_URI=http://localhost:4001
+REACT_APP_AUTH_DOMAIN=grandstack.auth0.com
+REACT_APP_AUTH_CLIENT_ID=5evv755oK2sd1j33H6Xjr3FESYGH16HH
+REACT_APP_AUTH_CALLBACK=http://localhost:3000/callback
